# multilevel-diacritizer

./: .gitattributes  .gitignore  CI.yml  Dockerfile  Procfile  README.md  app.json  code_tests.py  confusion_matrix.py  constants.py  dataset_processing.py  dl_model.py  hparams.json  kufah_diacritizer.py  losses.py  metrics.py  model.py  models.py  multi_level_diacritization.py  multi_level_diacritizer.ipynb  multi_level_diacritizer.py  processing.py  pyproject.toml  requirements.txt  sibawayh-diacritizer.py  tf_functions.py
.github/workflows/: CI.yml
multilevel_diacritizer/: confusion_matrix.py  constants.py  metrics.py  model.py  multi_level_diacritizer.py  tf_hash_tables.py
multilevel_diacritizer/templates/: base.html
multilevel_diacritizer_ui/: .gitignore  README.md  pubspec.yaml
multilevel_diacritizer_ui/lib/: main.dart
multilevel_diacritizer_ui/test/: diacritization_form_test.dart
multilevel_diacritizer_ui/web/: index.html  manifest.json
tests/: test_commands.py  test_functions.py  tests.py  train_mini.txt
