[tool.poetry]
name = "multilevel-diacritizer"
version = "0.3.0"
description = "Extensible DL-based automatic Arabic diacritization model allowing diacritics restoration with selectable types."
authors = ["Hamza Abbad <hamza.abbad@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.10"
tensorflow = "~2.4"
matplotlib = "^3.3.4"
Flask = "^1.1.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
